* Install System: add support for OpenSuSE. [#849] (Ralf Habacker)
* Layout: new dynamic quickNav menu: based on user activity to select 5 more visited projects (TrivialDev)
* Plugin AuthBuiltin: add captcha after 3 attempts with the same login [#795] (TrivialDev)
* Plugin AuthLDAP: support X_FORWARD_USER to delegate authentication and then retrieve user from LDAP (TrivialDev)
* Plugin GlobalActivity: forge-wide aggregation for project activities (Roland Mas)
* Plugin Mediawiki: support activity for public project (TrivialDev)
* Projects Page: add paging system in full_list and tag_cloud subpages (TrivialDev)
* SearchEngine: support only FTI queries (TrivialDev)
* Search: index project tags and use them for search (Roland Mas)
* Search: provide language-specific settings for better indexation/search (Roland Mas)
* Site Admin: add paging system in userlist page [#799] (TrivialDev)
* Site Admin: support widgets for forge home page (TrivialDev)
* Soap: getArtifacts tracker function: support changed_from parameter (TrivialDev)
* Soap: getFlattedArtifacts function: to return as CSV export. All data in 1 call (TrivialDev)
* Spellcheck (Anders Jonsson)
* Taskboard: support multiple taskboards per project [#785] (TrivialDev)
* Taskboard: support filtering tasks [#786] (TrivialDev)
* Tracker: keep values in artifact new submit form on error. (TrivialDev)
* Tracker: add new option on customfield text: regex pattern validation (TrivialDev)
* Tracker: add new customfield: User (TrivialDev)
* Tracker: add new customfield: DateTime (TrivialDev)
* Tracker: add new customfield: Release (TrivialDev)
* Tracker: add support for mandatory fields on workflow of artifact (TrivialDev)
* Tracker: add support for description on customfield to be used in tooltip (TrivialDev)
* Tracker: fix customfield cloning when not using default template fusionforge project [#829] (TrivialDev)
* Tracker: add support for autoassign [#151] & [#149] (TrivialDev)