@@ -35,7 +35,7 @@ if [ -e /etc/debian_version ]; then
 	apache2 postgresql postgresql-contrib libnss-pgsql2 unscd \
 	cvs subversion viewvc python-pycurl git xinetd \
 	python-moinmoin libapache2-mod-wsgi python-psycopg2 \
-	unoconv poppler-utils dpkg-dev 
+	unoconv poppler-utils dpkg-dev php-markdown
     if ! dpkg-vendor --is Ubuntu; then
 	apt-get install locales-all  # https://bugs.launchpad.net/ubuntu/+source/glibc/+bug/1394929
     fi
@@ -62,7 +62,7 @@ else
 	cvs subversion viewvc python-pycurl git gitweb xinetd \
 	moin mod_wsgi python-psycopg2 \
 	unoconv poppler-utils libreoffice-headless \
-        mediawiki
+        mediawiki php-markdown
 fi
 
 (
