@@ -48,16 +48,16 @@ class blocksPlugin extends Plugin {
 
 	function __construct() {
 		parent::__construct();
-		$this->name = "blocks";
-		$this->text = _("Blocks"); // To show in the tabs, use...
+		$this->name = 'blocks';
+		$this->text = _('Blocks'); // To show in the tabs, use...
 		$this->pkg_desc =
 _("This plugin contains the Blocks subsystem of FusionForge. It allows each
 FusionForge project to have its own Blocks, and gives some
 control over it to the project's administrator.");
-		$this->hooks[] = "groupisactivecheckbox"; // The "use ..." checkbox in editgroupinfo
-		$this->hooks[] = "groupisactivecheckboxpost"; //
-		$this->hooks[] = "project_admin_plugins"; // to show up in the admin page fro group
-		$this->hooks[] = "blocks"; // to show up in the admin page fro group
+		$this->hooks[] = 'groupisactivecheckbox'; // The "use ..." checkbox in editgroupinfo
+		$this->hooks[] = 'groupisactivecheckboxpost'; //
+		$this->hooks[] = 'project_admin_plugins'; // to show up in the admin page fro group
+		$this->hooks[] = 'blocks'; // to show up in the admin page fro group
 		$this->hooks[] = 'widget_instance';
 		$this->hooks[] = 'widgets';
 	}
@@ -74,7 +74,7 @@ control over it to the project's administrator.");
 		// Check if block is active and if yes, display the block.
 		// Return true if plugin is active, false otherwise.
 		$group = group_get_object($GLOBALS['group_id']);
-		if ($group && $group->usesPlugin ( $this->name )) {
+		if ($group && $group->usesPlugin($this->name)) {
 			$content = $this->renderBlock($params);
 			if ($content !== false) {
 				echo $content;
@@ -88,14 +88,14 @@ control over it to the project's administrator.");
 		$group_id = $GLOBALS['group_id'];
 		$res = db_query_params('SELECT title
 				FROM plugin_blocks
-				WHERE group_id=$1
-				AND name=$2
-				AND status=1',
+				WHERE group_id = $1
+				AND name = $2
+				AND status = 1',
 				array($group_id, $name)); // 1 is for active
-		if (db_numrows($res)== 0) {
+		if (db_numrows($res) == 0) {
 			return false;
 		} else {
-			return db_result($res,0,"title");
+			return db_result($res, 0, 'title');
 		}
 	}
 
@@ -103,14 +103,14 @@ control over it to the project's administrator.");
 		$group_id = $GLOBALS['group_id'];
 		$res = db_query_params('SELECT content
 				FROM plugin_blocks
-				WHERE group_id=$1
-				AND name=$2
-				AND status=1',
+				WHERE group_id = $1
+				AND name = $2
+				AND status = 1',
 				array($group_id, $name)); // 1 is for active
-		if (db_numrows($res)== 0) {
+		if (db_numrows($res) == 0) {
 			return false;
 		} else {
-			return db_result($res,0,"content");
+			return db_result($res, 0, 'content');
 		}
 	}
 	function renderBlock($name) {
@@ -127,18 +127,25 @@ control over it to the project's administrator.");
 
 	function parseContent($text) {
 		global $HTML;
+		$parsertype = forge_get_config('parser_type', 'blocks');
+		switch ($parsertype) {
+			case 'markdown':
+				require_once 'Michelf/Markdown.inc.php';
+				$text = \Michelf\Markdown::defaultTransform($text);
+				break;
+			default:
+				$text = preg_replace_callback('/<p>{boxTop (.*?)}<\/p>/i', function($m) { global $HTML; return $HTML->boxTop($m[1]); }, $text);
+				$text = preg_replace_callback('/{boxTop (.*?)}/i', function($m) { global $HTML; return $HTML->boxTop($m[1]); }, $text);
+				$text = preg_replace_callback('/<p>{boxMiddle (.*?)}<\/p>/i', function($m) { global $HTML; return $HTML->boxMiddle($m[1]); }, $text);
+				$text = preg_replace_callback('/{boxMiddle (.*?)}/i', function($m) { global $HTML; return $HTML->boxMiddle($m[1]); }, $text);
+				$text = preg_replace_callback('/<p>{boxBottom}<\/p>/i', function($m) { global $HTML; return $HTML->boxBottom($m[1]); }, $text);
+				$text = preg_replace_callback('/{boxBottom}/i', function($m) { global $HTML; return $HTML->boxBottom($m[1]); }, $text);
 
-		$text = preg_replace_callback('/<p>{boxTop (.*?)}<\/p>/i', function($m) { return $HTML->boxTop($m[1]); }, $text);
-		$text = preg_replace_callback('/{boxTop (.*?)}/i', function($m) { $HTML->boxTop($m[1]); }, $text);
-		$text = preg_replace_callback('/<p>{boxMiddle (.*?)}<\/p>/i', function($m) { $HTML->boxMiddle($m[1]); }, $text);
-		$text = preg_replace_callback('/{boxMiddle (.*?)}/i', function($m) { $HTML->boxMiddle($m[1]); }, $text);
-		$text = preg_replace('/<p>{boxBottom}<\/p>/i', $HTML->boxBottom(), $text);
-		$text = preg_replace('/{boxBottom}/i', $HTML->boxBottom(), $text);
-
-		$text = preg_replace('/<p>{boxHeader}/i', '<hr />', $text);
-		$text = preg_replace('/{boxHeader}/i', '<hr />', $text);
-		$text = preg_replace('/{boxFooter}<\/p>/i', '<hr />', $text);
-		$text = preg_replace('/{boxFooter}/i', '<hr />', $text);
+				$text = preg_replace('/<p>{boxHeader}/i', '<hr />', $text);
+				$text = preg_replace('/{boxHeader}/i', '<hr />', $text);
+				$text = preg_replace('/{boxFooter}<\/p>/i', '<hr />', $text);
+				$text = preg_replace('/{boxFooter}/i', '<hr />', $text);
+		}
 
 		return $text;
 	}
