@@ -3,9 +3,13 @@
 ; Current blocks is valid
 ; plugin_status is a string.
 ; valid means : production ready.
-; Any other strings means it's under work or broken and plugin 
+; Any other strings means it's under work or broken and plugin
 ; is available in installation_environment = development only.
 plugin_status = valid
 
 summary_description = "Enter your description here"
 default             = "{boxHeader}Enter your text here{boxFooter}"
+
+; to enable markdown parsing, uncomment the following lines
+;parser_type = 'markdown'
+;default     = "Use markdown syntax to enter your text here."
